--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 <header class="header bg-primary">
-<div class="left-title">JS Quiz</div>
+<div class="left-title">Java Script Quiz</div>
 <div class="right-title">Total Questions: <span id="tque"></span></div>
 <div class="clearfix"></div>
 </header>
